--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script src="./JS/task-1.js"></script>
+    <script src="./JS/task-2.js"></script>
+    <script src="./JS/task-3.js"></script>
     
 </body>
 </html>
