--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Hello World</h1>
     <script src="./JS/task-1.js"></script>
     <script src="./JS/task-2.js"></script>
     <script src="./JS/task-3.js"></script>
