--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <script src="./JS/task-1.js"></script>
-    <script src="./JS/task-2.js"></script>
-    <script src="./JS/task-3.js"></script>
+    <script src="./js/task-1.js"></script>
+    <script src="./js/task-2.js"></script>
+    <script src="./js/task-3.js"></script>
     
 </body>
 </html>
